--- a/studio/package.json
+++ b/studio/package.json
@@ -14,13 +14,14 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.11.1",
+    "@sanity/base": "^2.12.0",
     "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.11.0",
-    "@sanity/default-layout": "^2.11.1",
+    "@sanity/core": "^2.12.0",
+    "@sanity/default-layout": "^2.12.0",
     "@sanity/default-login": "^2.11.1",
-    "@sanity/desk-tool": "^2.11.1",
-    "@sanity/vision": "^2.11.0",
+    "@sanity/desk-tool": "^2.12.1",
+    "@sanity/google-maps-input": "^2.12.0",
+    "@sanity/vision": "^2.11.2",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
