--- a/web/package.json
+++ b/web/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "gatsby-starter-dimension-v2",
-  "description": "Gatsby Starter - Dimension V2",
+  "name": "cookware",
+  "description": "Cookware - Gatsby",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Jeroen Degloire",
   "dependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.2.9",
+    "gatsby": "^3.8.0",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.0.24",
-    "gatsby-plugin-modal-routing": "^1.0.2",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.10",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-image": "^1.8.0",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-modal-routing-3": "^3.0.0",
+    "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-styled-components": "^4.8.0",
     "gatsby-remark-normalize-paths": "^1.0.0",
-    "gatsby-remark-responsive-iframe": "^2.2.16",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-remark": "^2.6.22",
-    "gatsby-transformer-sharp": "^2.2.6",
+    "gatsby-remark-responsive-iframe": "^4.4.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-source-sanity": "^7.0.7",
+    "gatsby-transformer-remark": "^4.5.0",
+    "gatsby-transformer-sharp": "^3.7.1",
     "install": "^0.13.0",
-    "node-sass": "^4.11.0",
-    "npm": "^6.11.1",
+    "node-sass": "^4.14.1",
+    "npm": "^6.14.13",
     "react": "^16.8.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countup": "^4.2.1",
