--- a/studio/package.json
+++ b/studio/package.json
@@ -24,7 +24,8 @@
     "@sanity/vision": "^2.11.2",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {}
 }
