--- a/studio/package.json
+++ b/studio/package.json
@@ -21,11 +21,16 @@
     "@sanity/default-login": "^2.11.1",
     "@sanity/desk-tool": "^2.12.1",
     "@sanity/google-maps-input": "^2.12.0",
+    "@sanity/production-preview": "^2.2.6",
     "@sanity/vision": "^2.11.2",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "sanity-mobile-preview": "^1.0.8",
+    "sanity-plugin-iframe-pane": "^1.0.5",
+    "sanity-plugin-seo-pane": "^1.1.2",
+    "sanity-plugin-social-preview": "^0.1.5"
   },
   "devDependencies": {}
 }
