--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "author": "Jeroen Degloire",
   "dependencies": {
-    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/block-content-to-react": "2.0.7",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^3.8.0",
+    "gatsby": "^3.1.0",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-gatsby-cloud": "^2.8.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
