--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react-dom": "^16.9.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^3.1.0",
-    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-gatsby-cloud": "^2.8.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-manifest": "^3.7.1",
