--- a/studio/package.json
+++ b/studio/package.json
@@ -14,15 +14,15 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.12.2",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.12.2",
-    "@sanity/default-layout": "^2.12.2",
-    "@sanity/default-login": "^2.11.1",
-    "@sanity/desk-tool": "^2.12.2",
-    "@sanity/google-maps-input": "^2.12.2",
-    "@sanity/production-preview": "^2.2.6",
-    "@sanity/vision": "^2.11.2",
+    "@sanity/base": "^2.19.0",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.19.0",
+    "@sanity/default-layout": "^2.19.0",
+    "@sanity/default-login": "^2.19.0",
+    "@sanity/desk-tool": "^2.19.0",
+    "@sanity/google-maps-input": "^2.19.0",
+    "@sanity/production-preview": "^2.15.0",
+    "@sanity/vision": "^2.19.0",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
@@ -30,7 +30,8 @@
     "sanity-mobile-preview": "^1.0.8",
     "sanity-plugin-iframe-pane": "^1.0.5",
     "sanity-plugin-seo-pane": "^1.1.2",
-    "sanity-plugin-social-preview": "^0.1.5"
+    "sanity-plugin-social-preview": "^0.1.5",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {}
 }
