--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,6 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-manifest": "^3.7.1",
-    "gatsby-plugin-modal-routing-3": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-sass": "^4.8.0",
     "gatsby-plugin-sharp": "^3.7.1",
@@ -35,6 +34,7 @@
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.8.0",
+    "react-modal": "^3.14.3",
     "react-reveal": "^1.2.2",
     "react-router-modal": "^1.5.2",
     "react-scroll-parallax": "^2.1.2",
